vlib/v/checker/tests/result_param_type_err.out
vlib/v/checker/tests/result_param_type_err.vv:3:13: error: Result type argument is not supported currently
    1 | module main
    2 | 
    3 | fn func(arg !string, val &int) ?int {
      |             ~~~~~~~
    4 |     unsafe { *val = 2 }
    5 |     return 2
vlib/v/checker/tests/result_param_type_err.vv:9:7: error: Result type argument is not supported currently
    7 | 
    8 | fn main() {
    9 |     _ := map[string]fn(!string, &int) ?int{}
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 | }
